# best-fit-decreasing

./: BFD.cpp  BFD.h  CMakeLists.txt  FF.cpp  FF.h  README.md  bestFit.cpp  bestFit.h  commonFunction.cpp  commonFunction.h  main.cpp  nextFit.cpp  nextFit.h
